<resources>
    <string name="app_name">Casino Manager</string>


    <string name="out_of_service">Out of Service:</string>
    <string name="alerts">Alerts:</string>
    <string name="online">Online:</string>
    <string name="machine_name_text">Machine Name:</string>
    <string name="machine_type_text">Machine Type:</string>
    <string name="machine_make_text">Make:</string>
    <string name="paper_error">Paper Out</string>
    <string name="refill">Refill Paper</string>
    <string name="yes_button">Y</string>
    <string name="no_button">N</string>
    <string name="question_button">\?</string>
    <string name="reset_printer">Reset Printer</string>
    <string name="fixed">Fixed?</string>
    <string name="restart">Restart Machine</string>
    <string name="check_paper">Check Paper</string>
    <string name="alerts_text">Alerts</string>
    <string name="out_of_service_text">Out of Service</string>
    <string name="floor_staff">Floor Staff</string>
    <string name="alert_take">Take Job</string>
    <string name="report_saved">Report Saved</string>
    <string name="manager_alerted">Manager Alerted</string>
    <string name="check_paper_fix">Paper should be inserted with the black marks first. Turn the audit key.</string>
    <string name="reset_printer_fix">Open main door, enter service menu, Devices -> Printer check \'OFF\' option, exit menu. Enter service menu, Devices -> Printer check "ON" option. Turn the audit key</string>
    <string name="restart_machine_fix">Open main door, turn the machine off with the ON/OFF switch. Turn it back on. Turn audit key.</string>
    <string-array name="status">
        <item>Online</item>
        <item>Out of Service</item>
        <item>Alerts</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="position">Position:</string>
</resources>
