<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaperErrorFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/machineId_paper_out"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:paddingTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper_error"
        android:id="@+id/errorType"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refill"
        android:id="@+id/refill_paper"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed"
            android:id="@+id/textView5"
            android:textSize="24sp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:id="@+id/refill_paper_yes"
            android:layout_gravity="center_horizontal"
            android:singleLine="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button"
            android:id="@+id/refill_paper_no"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_button"
            android:id="@+id/refill_paper_question"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_paper"
        android:id="@+id/check_paper"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed"
            android:id="@+id/textView10"
            android:textSize="24sp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:id="@+id/check_paper_yes" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button"
            android:id="@+id/check_paper_no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_button"
            android:id="@+id/check_paper_question" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_printer"
        android:id="@+id/reset_printer"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:textSize="24sp"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed"
            android:id="@+id/textView6"
            android:textSize="24sp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:id="@+id/reset_printer_yes" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button"
            android:id="@+id/reset_printer_no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_button"
            android:id="@+id/reset_printer_question" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:id="@+id/restart_machine"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed"
            android:id="@+id/textView8"
            android:layout_gravity="center_vertical"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:id="@+id/restart_button_yes" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button"
            android:id="@+id/restart_button_no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_button"
            android:id="@+id/restart_button_question" />
    </LinearLayout>

</LinearLayout>
